test/files/neg/implicit-shadow.check
implicit-shadow.scala:6: error: value isEmpty is not a member of Int
	1.isEmpty
	  ^
1 error
